--- a/public/css/app.css
+++ b/public/css/app.css
@@ -162,7 +162,7 @@ hr {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 60%;
     margin: 0 auto;
     padding-left: 1rem;
     padding-right: 1rem;
